# search-engine

./: .dockerignore  .env  .gitignore  Dockerfile  MODELS.md  Makefile  README.md  docker-compose.yml  example.txt  gemini.txt  manual_testing.md  manual_testing_feedback.md  plan.md  pyproject.toml  questions.md
app/: __init__.py  cli.py  config.py  env.py  main.py  models.py  reranker_api.py  summarizer_api.py  ui.py
app/db/: global_store.py  source_store.py
app/services/: __init__.py  content_units.py  ingest.py  search.py  stopwords.py  summarize.py  tokenize.py  vector_store.py
app/static/css/: site.css
app/static/js/: ai-search-page.js  document-page.js  result-card-utils.js  search-page.js  status-page.js
app/templates/: ai_results.html  base.html  error.html  index.html  results.html  sources.html  status.html
app/worker/: runner.py
docs/: architecture.md
prompts/: answer.txt  summarize.txt
scripts/: init-ollama.sh
src/search_engine/: __init__.py  config.py  document_loader.py  index_registry.py  indexer.py  models.py  paging.py  runtime.py  search_backend.py  storage.py  sync.py  tui.py
tests/: docling_dump.py  test_ingest.py  test_main.py  test_search.py  test_storage.py  test_tokenize.py
