[project]
name = "searchy"
version = "0.1.0"
description = "Local document search engine with FastAPI, SQLite, and async ingestion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.33.0",
  "fastapi>=0.118.0",
  "jinja2>=3.1.6",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "simplemma>=1.1.2",
  "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=5.1.0",
]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
