[project]
name = "searchi"
version = "0.1.0"
description = "Local document search engine with FastAPI, SQLite, and async ingestion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docker>=7.0.0",
  "docling>=2.33.0",
  "faiss-cpu>=1.11.0",
  "fastapi>=0.118.0",
  "jinja2>=3.1.6",
  "numpy>=2.3.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "sentence-transformers>=5.1.0",
  "simplemma>=1.1.2",
  "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
